--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
         <p style="color:yellow; text-align: right;">
             Dieser Test ist in einem Paragragh
         </p>
+        <a href="seite2.html">Seite 2</a>
     </body>
 </html>
