Add Password field

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <form>
             <input type=text name=test placeholder="Testfeld">
             <br>
+            <input type=password name=password placeholder="Passwort">
+            <br>
             <button>Submit</button>
         </form>
         <hr>
