--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     </head>
     <body>
         <h1>Hallo</h1>
+        <nav>
+            <ul>
+                <li>
+                    GIT
+                </li>
+                <li>
+                    HTML
+                </li>
+                <li>
+                    SHELL
+                </li>
+            </ul>
+        </nav>
         <table border=1 class="center">
             <tr>
                 <td>
