Add favicon and Emojis

--- a/index.html
+++ b/index.html
@@ -3,22 +3,30 @@
     <head>
         <title>Test-Seite</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.png" type="image/png">
+
     </head>
     <body>
         <h1>Hallo</h1>
         <nav>
             <ul>
                 <li>
-                    GIT
+                    GIT &#128512
                 </li>
                 <li>
-                    HTML
+                    HTML &#128526
                 </li>
                 <li>
-                    SHELL
+                    SHELL &#128520
                 </li>
             </ul>
         </nav>
+        <details>
+            <summary>
+                Details
+            </summary>
+            Ein kleiner Test zu dem "details"-Tag.
+        </details>
         <table border=1 class="center">
             <tr>
                 <td>
