--- a/seite2.html
+++ b/seite2.html
@@ -14,7 +14,8 @@
             <h5>Fuer h5 finde ich auch noch Verwendung</h5>
             <h6>Und auch fuer h6 ist mir noch was eingefallen</h6>
             <hr>
-            <a href="index.html">Zurueck zur Startseite</a>
+            <a href="index.html">Startseite</a>
+            <a href="page3.html">Seite 3</a>
         </div>
     </body>
 </html>
