Add semicolons on emojis

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <nav>
             <ul>
                 <li>
-                    GIT &#128512
+                    GIT &#128512;
                 </li>
                 <li>
-                    HTML &#128526
+                    HTML &#128526;
                 </li>
                 <li>
-                    SHELL &#128520
+                    SHELL &#128520;
                 </li>
             </ul>
         </nav>
