Add inpage links

--- a/page3.html
+++ b/page3.html
@@ -1,8 +1,21 @@
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Seite 3</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.png" type="image/png">
     </head>
     <body>
+        <h1>Seite 3</h1>
+        <details>
+            <summary>Navigation</summary>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Startseite</a></li>
+                    <li><a href="seite2.html">Seite 2</a></li>
+                </ul>
+            </nav>
+        </details>
         <table border=1 class="center">
             <tr>
                 <td>
@@ -43,12 +56,10 @@
         <i>kursiver Text</i>
         <hr>
         <div style="color:red; text-align:center;">
-            Dieser Text ist einer div
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam, eaque perferendis. Dicta impedit dolores consequuntur sequi corporis itaque numquam alias veniam in necessitatibus nisi iusto assumenda facilis, officia eaque accusamus!
         </div>
         <p style="color:yellow; text-align: right;">
-            Dieser Test ist in einem Paragragh
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis corrupti, voluptatibus impedit error voluptatum temporibus qui expedita repudiandae laboriosam omnis iusto harum quaerat nisi incidunt ad ut. Eos, nihil eaque.
         </p>
-        <a href="index.html">Startseite</a>
-        <a href="seite2.html">Seite 2</a>
     </body>
 </html>
