--- a/seite2.html
+++ b/seite2.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>
-            Test-Seite
-        </title>
+        <meta charset="UTF-8">
+        <title>Seite2</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.png" type="image/png">
     </head>
     <body>
+        <h1>Seite 2</h1>
+        <details>
+            <summary>Navigation</summary>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Startseite</a></li>
+                    <li><a href="page3.html">Seite 3</a></li>
+                </ul>
+            </nav>
+        </details>
         <div class="center">
             <h2>Herzlich Willkommen auf Seite 2</h2>
             <h3>Hier gibt es noch unterschiedliche Header Typen</h3>
@@ -14,8 +24,6 @@
             <h5>Fuer h5 finde ich auch noch Verwendung</h5>
             <h6>Und auch fuer h6 ist mir noch was eingefallen</h6>
             <hr>
-            <a href="index.html">Startseite</a>
-            <a href="page3.html">Seite 3</a>
         </div>
     </body>
 </html>
