--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1><a id="top">Hallo</a></h1>
-        <details>
+        <details id="nav">
             <summary>Navigation</summary>
             <nav>
                 <ul>
