--- a/page3.html
+++ b/page3.html
@@ -1,65 +1,67 @@
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Seite 3</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="favicon.png" type="image/png">
-    </head>
-    <body>
-        <h1>Seite 3</h1>
-        <details>
-            <summary>Navigation</summary>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Startseite</a></li>
-                    <li><a href="seite2.html">Seite 2</a></li>
-                </ul>
-            </nav>
-        </details>
-        <table border=1 class="center">
-            <tr>
-                <td>
-                    Ordered List
-                </td>
-                <td>
-                    Unordered List
-                </td>
-            </tr>
-            <tr>    
-                <td>
-                    <ol>
-                        <li>Punkt 1</li>
-                        <li>Punkt 2</li>
-                        <li>Punkt 3</li>
-                    </ol>
-                </td>
-                <td>
-                    <ul>
-                        <li>Punkt 1</li>
-                        <li>Punkt 2</li>
-                        <li>Punkt 3</li>
-                    </ul>
-                </td>
-            </tr>
-        </table>
-        <hr>
-        <form>
-            <input type=text name=test placeholder="Testfeld">
-            <br>
-            <input type=password name=password placeholder="Passwort">
-            <br>
-            <button>Submit</button>
-        </form>
-        <hr>
-        <b>fetter Text</b>
-        <br>
-        <i>kursiver Text</i>
-        <hr>
-        <div style="color:red; text-align:center;">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam, eaque perferendis. Dicta impedit dolores consequuntur sequi corporis itaque numquam alias veniam in necessitatibus nisi iusto assumenda facilis, officia eaque accusamus!
-        </div>
-        <p style="color:yellow; text-align: right;">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis corrupti, voluptatibus impedit error voluptatum temporibus qui expedita repudiandae laboriosam omnis iusto harum quaerat nisi incidunt ad ut. Eos, nihil eaque.
-        </p>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Seite 3</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.png" type="image/png" />
+  </head>
+  <body>
+    <h1>Seite 3</h1>
+    <details>
+      <summary>Navigation</summary>
+      <nav>
+        <ul>
+          <li><a href="index.html">Startseite</a></li>
+          <li><a href="seite2.html">Seite 2</a></li>
+        </ul>
+      </nav>
+    </details>
+    <table border="1" class="center">
+      <tr>
+        <td>Ordered List</td>
+        <td>Unordered List</td>
+      </tr>
+      <tr>
+        <td>
+          <ol>
+            <li>Punkt 1</li>
+            <li>Punkt 2</li>
+            <li>Punkt 3</li>
+          </ol>
+        </td>
+        <td>
+          <ul>
+            <li>Punkt 1</li>
+            <li>Punkt 2</li>
+            <li>Punkt 3</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+    <hr />
+    <form>
+      <input type="text" name="test" placeholder="Testfeld" />
+      <br />
+      <input type="password" name="password" placeholder="Passwort" />
+      <br />
+      <button>Submit</button>
+    </form>
+    <hr />
+    <b>fetter Text</b>
+    <br />
+    <i>kursiver Text</i>
+    <hr />
+    <div style="color: red; text-align: center">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam, eaque
+      perferendis. Dicta impedit dolores consequuntur sequi corporis itaque
+      numquam alias veniam in necessitatibus nisi iusto assumenda facilis,
+      officia eaque accusamus!
+    </div>
+    <p style="color: yellow; text-align: right">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+      corrupti, voluptatibus impedit error voluptatum temporibus qui expedita
+      repudiandae laboriosam omnis iusto harum quaerat nisi incidunt ad ut. Eos,
+      nihil eaque.
+    </p>
+  </body>
 </html>
