--- a/index.html
+++ b/index.html
@@ -3,33 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <title>Test-Seite</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="icon" href="favicon.png" type="image/png" />
   </head>
   <body>
     <h1><a id="top">Hallo</a></h1>
-    <details id="nav">
-      <summary>Navigation</summary>
-      <nav>
-        <ul>
-          <li>
-            <a href="#git">GIT</a>
-          </li>
-          <li>
-            <a href="#html">HTML</a>
-          </li>
-          <li>
-            <a href="#shell">SHELL</a>
-          </li>
-          <li>
-            <a href="seite2.html">Seite 2</a>
-          </li>
-          <li>
-            <a href="page3.html">Seite 3</a>
-          </li>
-        </ul>
-      </nav>
-    </details>
+    <nav class="nav">
+      <ul class="navbar">
+        <li>
+          <a href="#git" class="nav-link">GIT</a>
+        </li>
+        <li>
+          <a href="#html" class="nav-link">HTML</a>
+        </li>
+        <li>
+          <a href="#shell" class="nav-link">SHELL</a>
+        </li>
+        <li>
+          <a href="seite2.html" class="nav-link">Seite 2</a>
+        </li>
+        <li>
+          <a href="page3.html" class="nav-link">Seite 3</a>
+        </li>
+      </ul>
+    </nav>
     <details>
       <summary>Details</summary>
       Ein kleiner Test zu dem "details"-Tag.
