--- a/page3.html
+++ b/page3.html
@@ -2,20 +2,21 @@
   <head>
     <meta charset="UTF-8" />
     <title>Seite 3</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="icon" href="favicon.png" type="image/png" />
   </head>
   <body>
     <h1>Seite 3</h1>
-    <details>
-      <summary>Navigation</summary>
-      <nav>
-        <ul>
-          <li><a href="index.html">Startseite</a></li>
-          <li><a href="seite2.html">Seite 2</a></li>
-        </ul>
-      </nav>
-    </details>
+    <nav class="nav">
+      <ul class="navbar">
+        <li>
+          <a href="index.html" class="nav-link">Startseite</a>
+        </li>
+        <li>
+          <a href="seite2.html" class="nav-link">Seite 2</a>
+        </li>
+      </ul>
+    </nav>
     <table border="1" class="center">
       <tr>
         <td>Ordered List</td>
