--- a/seite2.html
+++ b/seite2.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <title>Seite2</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="icon" href="favicon.png" type="image/png" />
   </head>
   <body>
     <h1>Seite 2</h1>
-    <details>
-      <summary>Navigation</summary>
-      <nav>
-        <ul>
-          <li><a href="index.html">Startseite</a></li>
-          <li><a href="page3.html">Seite 3</a></li>
-        </ul>
-      </nav>
-    </details>
+    <nav class="nav">
+      <ul class="navbar">
+        <li>
+          <a href="index.html" class="nav-link">Startseite</a>
+        </li>
+        <li>
+          <a href="page3.html" class="nav-link">Seite 3</a>
+        </li>
+      </ul>
+    </nav>
     <div class="center">
       <h2>Herzlich Willkommen auf Seite 2</h2>
       <h3>Hier gibt es noch unterschiedliche Header Typen</h3>
