--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1><a id="top">Hallo</a></h1>
-    <nav class="nav">
+    <nav>
       <ul class="navbar">
         <li>
           <a href="#git" class="nav-link">GIT</a>
