--- a/page3.html
+++ b/page3.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Seite 3</h1>
-    <nav class="nav">
+    <nav>
       <ul class="navbar">
         <li>
           <a href="index.html" class="nav-link">Startseite</a>
