--- a/seite2.html
+++ b/seite2.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Seite 2</h1>
-    <nav class="nav">
+    <nav>
       <ul class="navbar">
         <li>
           <a href="index.html" class="nav-link">Startseite</a>
