--- a/index.html
+++ b/index.html
@@ -8,25 +8,28 @@
   </head>
   <body>
     <h1><a id="top">Hallo</a></h1>
-    <nav>
-      <ul class="navbar">
-        <li>
-          <a href="#git" class="nav-link">GIT</a>
-        </li>
-        <li>
-          <a href="#html" class="nav-link">HTML</a>
-        </li>
-        <li>
-          <a href="#shell" class="nav-link">SHELL</a>
-        </li>
-        <li>
-          <a href="seite2.html" class="nav-link">Seite 2</a>
-        </li>
-        <li>
-          <a href="page3.html" class="nav-link">Seite 3</a>
-        </li>
-      </ul>
-    </nav>
+    <details>
+      <summary>Navigation</summary>
+      <nav>
+        <ul class="navbar">
+          <li>
+            <a href="#git" class="nav-link">GIT</a>
+          </li>
+          <li>
+            <a href="#html" class="nav-link">HTML</a>
+          </li>
+          <li>
+            <a href="#shell" class="nav-link">SHELL</a>
+          </li>
+          <li>
+            <a href="seite2.html" class="nav-link">Seite 2</a>
+          </li>
+          <li>
+            <a href="page3.html" class="nav-link">Seite 3</a>
+          </li>
+        </ul>
+      </nav>
+    </details>
     <details>
       <summary>Details</summary>
       Ein kleiner Test zu dem "details"-Tag.
