--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.png" type="image/png" />
   </head>
   <body>
-    <h1><a id="top">Hallo</a></h1>
+    <h1 id="top">Hallo</h1>
     <details>
       <summary>Navigation</summary>
       <nav>
