--- a/page3.html
+++ b/page3.html
@@ -7,16 +7,19 @@
   </head>
   <body>
     <h1>Seite 3</h1>
-    <nav>
-      <ul class="navbar">
-        <li>
-          <a href="index.html" class="nav-link">Startseite</a>
-        </li>
-        <li>
-          <a href="seite2.html" class="nav-link">Seite 2</a>
-        </li>
-      </ul>
-    </nav>
+    <details>
+      <summary>Navigation</summary>
+      <nav>
+        <ul class="navbar">
+          <li>
+            <a href="index.html" class="nav-link">Startseite</a>
+          </li>
+          <li>
+            <a href="seite2.html" class="nav-link">Seite 2</a>
+          </li>
+        </ul>
+      </nav>
+    </details>
     <table border="1" class="center">
       <tr>
         <td>Ordered List</td>
