--- a/seite2.html
+++ b/seite2.html
@@ -8,16 +8,19 @@
   </head>
   <body>
     <h1>Seite 2</h1>
-    <nav>
-      <ul class="navbar">
-        <li>
-          <a href="index.html" class="nav-link">Startseite</a>
-        </li>
-        <li>
-          <a href="page3.html" class="nav-link">Seite 3</a>
-        </li>
-      </ul>
-    </nav>
+    <details>
+      <summary>Navigation</summary>
+      <nav>
+        <ul class="navbar">
+          <li>
+            <a href="index.html" class="nav-link">Startseite</a>
+          </li>
+          <li>
+            <a href="page3.html" class="nav-link">Seite 3</a>
+          </li>
+        </ul>
+      </nav>
+    </details>
     <div class="center">
       <h2>Herzlich Willkommen auf Seite 2</h2>
       <h3>Hier gibt es noch unterschiedliche Header Typen</h3>
