--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
       <summary>Navigation</summary>
       <nav>
         <ul class="navbar">
-          <li>
+          <li class="nav-item">
             <a href="#git" class="nav-link">GIT</a>
           </li>
-          <li>
+          <li class="nav-item">
             <a href="#html" class="nav-link">HTML</a>
           </li>
-          <li>
+          <li class="nav-item">
             <a href="#shell" class="nav-link">SHELL</a>
           </li>
-          <li>
+          <li class="nav-item">
             <a href="seite2.html" class="nav-link">Seite 2</a>
           </li>
-          <li>
+          <li class="nav-item">
             <a href="page3.html" class="nav-link">Seite 3</a>
           </li>
         </ul>
