--- a/page3.html
+++ b/page3.html
@@ -21,10 +21,10 @@
       <summary>Navigation</summary>
       <nav>
         <ul class="navbar">
-          <li>
+          <li class="nav-item">
             <a href="index.html" class="nav-link">Startseite</a>
           </li>
-          <li>
+          <li class="nav-item">
             <a href="seite2.html" class="nav-link">Seite 2</a>
           </li>
         </ul>
