--- a/seite2.html
+++ b/seite2.html
@@ -22,10 +22,10 @@
       <summary>Navigation</summary>
       <nav>
         <ul class="navbar">
-          <li>
+          <li class="nav-item">
             <a href="index.html" class="nav-link">Startseite</a>
           </li>
-          <li>
+          <li class="nav-item">
             <a href="page3.html" class="nav-link">Seite 3</a>
           </li>
         </ul>
