Add cards and style

--- a/index.html
+++ b/index.html
@@ -45,316 +45,46 @@
       Ein kleiner Test zu dem "details"-Tag.
     </details>
     <section id="git">
-      <h2>GIT</h2>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <a href="#top">Zurück nach oben</a>
+      <div class="card" style="width: 18rem">
+        <div class="card-body">
+          <h5 class="card-title">GIT</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam
+            ea, nisi natus officia, unde delectus quis cumque ipsam commodi,
+            corporis illum rerum perspiciatis excepturi voluptatum. Deleniti
+            atque magni ipsam exercitationem. <br />
+            <a href="#top" class="card-link">Zurück nach oben</a>
+          </p>
+        </div>
+      </div>
     </section>
     <section id="html">
-      <h2>HTML</h2>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <a href="#top">Zurück nach oben</a>
+      <div class="card" style="width: 18rem">
+        <div class="card-body">
+          <h5 class="card-title">HTML</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam
+            ea, nisi natus officia, unde delectus quis cumque ipsam commodi,
+            corporis illum rerum perspiciatis excepturi voluptatum. Deleniti
+            atque magni ipsam exercitationem. <br />
+            <a href="#top" class="card-link">Zurück nach oben</a>
+          </p>
+        </div>
+      </div>
     </section>
     <section id="shell">
-      <h2>SHELL</h2>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-        obcaecati, quisquam nihil saepe eum illo laborum amet ex quis esse
-        explicabo illum distinctio est accusamus omnis cum rerum autem minus.
-      </p>
-      <a href="#top">Zurück nach oben</a>
+      <div class="card" style="width: 18rem">
+        <div class="card-body">
+          <h5 class="card-title">SHELL</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam
+            ea, nisi natus officia, unde delectus quis cumque ipsam commodi,
+            corporis illum rerum perspiciatis excepturi voluptatum. Deleniti
+            atque magni ipsam exercitationem. <br />
+            <a href="#top" class="card-link">Zurück nach oben</a>
+          </p>
+        </div>
+      </div>
     </section>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
