--- a/index.html
+++ b/index.html
@@ -20,10 +20,21 @@
     <h1 id="top">Hallo</h1>
     <details>
       <summary>Navigation</summary>
-      <nav class="nav">
-        <a href="#git" class="nav-link">GIT</a>
-        <a href="#html" class="nav-link">HTML</a>
-        <a href="#shell" class="nav-link">SHELL</a>
+      <nav class="nav nav-tabs">
+        <a
+          class="nav-link dropdown-toggle"
+          data-toggle="dropdown"
+          href="#"
+          role="button"
+          aria-haspopup="true"
+          aria-expanded="false"
+          >Jump to ...</a
+        >
+        <div class="dropdown-menu">
+          <a href="#git" class="dropdown-item">GIT</a>
+          <a href="#html" class="dropdown-item">HTML</a>
+          <a href="#shell" class="dropdown-item">SHELL</a>
+        </div>
         <a href="seite2.html" class="nav-link">Seite 2</a>
         <a href="page3.html" class="nav-link">Seite 3</a>
       </nav>
